# nl-kat-coordination

./: .djlintrc  .dockerignore  .editorconfig  .env-defaults  .env-dist  .env-prod  .env-release  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .semgrepignore  .stylelintrc.json  CONTRIBUTING.rst  Dockerfile  Dockerfile.dev  MANIFEST.in  Makefile  OOI_database_seed.json  README.adoc  README.md  README.rst  Readme.md  alembic.ini  app.py  bytes_client.py  celery_config.py  config.py  database.env-dist  docker-compose.mountless.yml  docker-compose.release-example.yml  docker-compose.yml  entrypoint.sh  init-user-db.sh  job.py  job_handler.py  kat_finding_types.json  logging.json  logging.yml  manage.py  (+13 more)
boefjes/: .dockerignore  .env-dist  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  __main__.py  app.py  celery_config.py  config.py  entrypoint.sh  job.py  job_handler.py  job_models.py  local.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  runner.py  runtime.py  runtime_interfaces.py  seed.py  setup.py  tasks.py
boefjes/.ci/: .env.test  ci-pre-commit-config.yaml  docker-compose.yml
boefjes/boefjes/: __init__.py  __main__.py  alembic.ini  api.py  app.py  config.py  docker_boefjes_runner.py  interfaces.py  job_handler.py  job_models.py  local.py  local_repository.py  logging.json  logging.py  models.py  normalizer_interfaces.py  normalizer_models.py  remote_boefjes_runner.py  runtime_interfaces.py  seed.py  utils.py  version.py
boefjes/clients/: bytes_client.py  scheduler_client.py
boefjes/debian/: control  copyright  kat-boefjes.kat-boefjes.service  kat-boefjes.kat-katalogus.service  kat-boefjes.sysusers  postinst  prerm  rules
boefjes/docs/: boefjes-runner.md  normalisers-runner.md
boefjes/export_migrations/: 0001_add_katalogus_models.sql  0002_change_lengths_of_several_char_fields.sql  0003_longer_plugin_ids.sql  0005_cd34fdfafdaf_json_settings_for_settings_table.sql  0006_7c88b9cd96aa_remove_the_repository_model.sql  0007_6f99834a4a5a_introduce_boefje_and_normalizer_models.sql  0008_f9de6eb7824b_introduce_boefjeconfig_model.sql  0009_5be152459a7b_introduce_schema_field_to_boefje_model.sql  0010_870fc302b852_remove_environment_keys_field.sql  0011_a2c8d54b0124_unique_plugin_names.sql  0012_9f48560b0000_add_schedule_interval_fields.sql  0013_fc0295b38184_add_run_on_field_to_boefje.sql  0014_fdeaea4481b8_add_deduplication_flag.sql
boefjes/images/: base.Dockerfile  base.Dockerfile.dockerignore  boefje_entrypoint.sh  docker_adapter.py  generic.Dockerfile  generic_oci_adapter.py  oci_adapter.py  openkat.Dockerfile  requirements.txt
boefjes/kat_binaryedge/: boefje.py  main.py
boefjes/kat_crt_sh/: boefje.py  main.py  normalize.py
boefjes/kat_dicom/: boefje.py  main.py  normalize.py
boefjes/kat_dns/: boefje.py  main.py  normalize.py
boefjes/kat_dns_zone/: boefje.py  main.py  normalize.py
boefjes/kat_dnssec/: boefje.py  main.py  normalize.py
boefjes/kat_fierce/: boefje.py  description.md  fierce.py  main.py  normalize.py
boefjes/kat_green_hosting/: boefje.py  normalize.py  scan.py
boefjes/kat_leakix/: boefje.py  main.py  normalize.py
boefjes/kat_log4shell/: boefje.py  main.py
boefjes/kat_manyportsopen/: boefje.py  main.py  normalize.py
boefjes/kat_nmap/: boefje.py  description.md  main.py  normalize.py  requirements.txt
boefjes/kat_shodan/: boefje.py  description.md  main.py  normalize.py  requirements.txt
boefjes/kat_snyk/: boefje.py  description.md  main.py  normalize.py
boefjes/kat_ssl_certificates/: boefje.py  main.py  normalize.py  requirements.txt
boefjes/kat_ssl_scan/: boefje.py  main.py  normalize.py
boefjes/kat_webpage_analysis/: boefje.py  headers_normalize.py  main.py
boefjes/kat_website_similarity/: boefje.py  main.py  normalize.py  requirements.txt
boefjes/kat_website_software/: boefje.py  main.py  normalize.py
boefjes/kat_wpscan/: boefje.py  description.md  main.py  normalize.py  requirements.txt
boefjes/katalogus/: api.py  boefjes.py  clients.py  local_repository.py  models.py  organisations.py  types.py  v1.py
boefjes/lxd/: lxd_runner.py
boefjes/migrations/: env.py
boefjes/plugin_repository/: Dockerfile  requirements.txt
boefjes/plugins/: models.py
boefjes/sql/: db.py  db_models.py  session.py  (+4 more)
bytes/: .dockerignore  .env-dist  .flake8  .gitignore  Dockerfile  Makefile  README.md  README.rst  alembic.ini  auth.py  config.py  dev.logging.conf  entrypoint.sh  logging.conf  models.py  pyproject.toml  rabbitmq.py  requirements-dev.txt  requirements.txt  setup.py
cveapi/: Makefile  cveapi.py  pyproject.toml  requirements.txt
keiko/: .dockerignore  .env-dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  api.py  app.py  base_models.py  cli.py  health.py  keiko.py  logging.json  logging.py  pyproject.toml  removekeiko.sh  requirements-check.txt  requirements-dev.txt  requirements.txt  settings.py  setup.py  templates.py  version.py
mula/: .coveragerc  .dockerignore  .env-dist  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  entrypoint.sh  logging.json  logging.prod.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  whitelist.py
octopoes/: .dockerignore  .editorconfig  .env-dist  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  conftest.py  docker-compose-dev.yml  entrypoint.sh  logging-prop.yml  logging.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
rocky/: .coveragerc  .dockerignore  .editorconfig  .env-dist  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Dockerfile.dev  MANIFEST.in  Makefile  OOI_database_seed.json  Readme.md  Readme.rst  boefjes.py  bytes_client.py  celery.py  celery_config.py  entrypoint.sh  exceptions.py  flower.py  katalogus.py  keiko.py  logging.json  manage.py  package.json  pyproject.toml  requirements-check.txt  requirements-dev.txt  requirements.txt  scheduler.py  settings.py  setup.py  urls.py  uwsgi.ini  whitelist.py
(+5572 files in other folders)
