[tool.poetry]
name = "boefjes"
version = "0.0.1.dev1"
description = "KAT's pentest tool runtime"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
click = "^8.1.3"
jsonschema = "^4.17.0"
pydantic = "^2.7.1"
docker = "^7.1.0"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.10"
pynacl = "^1.5.0"
sqlalchemy = "^1.4.48"
python-dateutil = "^2.8.2"
pydantic-settings = "^2.2.1"
opentelemetry-sdk = "^1.32.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.32.1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
opentelemetry-instrumentation-psycopg2 = "^0.53b1"
opentelemetry-instrumentation-requests = "^0.53b1"
opentelemetry-instrumentation = "^0.53b1"
# required by kat_snyk, kat_crt_sh, kat_crt_sh boefjes
requests = "^2.32.1"
# required by kat_binaryedge boefje
pybinaryedge = "0.5"
# required by kat_burpsuite, kat_snyk boefjes, kat_webpage_analysis/find_images_in_html normalizer
beautifulsoup4 = "4.11.1"
# required by kat_censys boefje
censys = "2.1.8"
# required by kat_dicom boefje
pynetdicom = "2.0.2"
pydicom = "2.4.4"
# required by kat_dns, kat_dns_zone boefjes
dnspython = "^2.6.1"
# required by kat_fierce
tldextract = "^3.4.4"
# required by kat_log4shell boefje, kat_webpage_analysis/find_images_in_html normalizer
validators = "0.20.0"
# required by kat_nmap boefje
python-libnmap = "0.7.3"
# required by kat_shodan boefje
shodan = "1.25.0"
# required by kat_ssl_certificates boefje
cryptography = "^44.0.1"
# required by kat_webpage_analysis
forcediphttpsadapter = "1.1.0"
# required by kat_webpage_analysis (forcediphttpsadapter)
urllib3 = "^2.1.0"
# required by kat_wpscan
wpscan-out-parse = "1.9.3"
# required by kat_sec_txt
sectxt = "0.9.0"
# required by kat_rpki
netaddr = "^1.3.0"
# required by kat_burpsuite, kat_cwe_finding_types and kat_ssl_scan
defusedxml = "^0.7.1"
# required by kat_webpage_analysis/check_images normalizer
pillow = "^10.3.0"
httpx = "^0.28.1"
opentelemetry-api = "^1.32.1"
opentelemetry-exporter-otlp-proto-common = "^1.32.1"
opentelemetry-instrumentation-asgi = "^0.53b1"
opentelemetry-instrumentation-dbapi = "^0.53b1"
opentelemetry-proto = "^1.32.1"
opentelemetry-semantic-conventions = "^0.53b1"
opentelemetry-util-http = "^0.53b1"
fastapi-slim = "^0.115.2"
structlog = "^25.2.0"
# required by kat_maxmind_geoip
maxminddb = "^2.6.2"
# required by kat_wappalyzer
tanimachi = "^0.0.6"
cpe = "^1.3.1"
croniter = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.flynt]
line-length = 120
transform-concats = true

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow"]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered -m 'not slow'"
env = [
    "D:KATALOGUS_DB_URI=postgresql://postgres:postgres@ci_katalogus-db:5432/ci_katalogus",
    "D:BOEFJES_API=http://placeholder:8006",
    "D:KATALOGUS_API=http://placeholder:8000",
    "D:OCTOPOES_API=http://placeholder:8001",
    "D:SCHEDULER_API=http://placeholder:8002",
    "D:BYTES_API=http://placeholder:8003",
    "D:BYTES_USERNAME=placeholder",
    "D:BYTES_PASSWORD=placeholder",
]
