[project]
name = "boefjes"
version = "0.0.1.dev1"
description = "KAT's pentest tool runtime"
authors = [{ name = "MinVWS", email = "maintainer@openkat.nl" }]
requires-python = "~=3.10"
license = "EUPL-1.2"
dependencies = [
    "alembic~=1.8",
    "click>=8.1.3,<9",
    "jsonschema>=4.17.0,<5",
    "pydantic>=2.7.1,<3",
    "docker>=7.1.0,<8",
    "uvicorn>=0.29.0,<0.30",
    "psycopg2-binary>=2.9.10",
    "pynacl>=1.5.0,<2",
    "sqlalchemy>=1.4.48",
    "python-dateutil>=2.8.2,<3",
    "pydantic-settings>=2.2.1,<3",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation",
    "requests>=2.32.1,<3",
    "beautifulsoup4==4.11.1",
    "dnspython>=2.6.1,<3",
    "tldextract>5",
    "validators==0.20.0",
    "python-libnmap==0.7.3",
    "cryptography>45",
    "forcediphttpsadapter==1.1.0",
    "urllib3>=2.1.0,<3",
    "wpscan-out-parse==1.9.3",
    "netaddr>=1.3.0,<2",
    "defusedxml>=0.7.1,<0.8",
    "pillow>=11",
    "httpx>=0.28.1,<0.29",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-dbapi",
    "opentelemetry-proto",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "fastapi-slim>=0.115.2",
    "structlog>=25.2.0,<26",
    "maxminddb>=2.6.2,<3",
    "tanimachi>=0.0.6,<0.0.7",
    "cpe>=1.3.1,<2",
    "croniter>=6.0.0,<7",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-env>=1.1.3,<2",
    "pytest-mock>=3.14.0,<4",
    "pytest-cov>=6.0.0,<7",
]

[tool.uv]
package = false

[tool.flynt]
line-length = 120
transform-concats = true

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow"]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered -m 'not slow'"
env = [
    "D:KATALOGUS_DB_URI=postgresql://postgres:postgres@ci_katalogus-db:5432/ci_katalogus",
    "D:BOEFJES_API=http://placeholder:8006",
    "D:KATALOGUS_API=http://placeholder:8000",
    "D:OCTOPOES_API=http://placeholder:8001",
    "D:SCHEDULER_API=http://placeholder:8002",
    "D:BYTES_API=http://placeholder:8003",
    "D:BYTES_USERNAME=placeholder",
    "D:BYTES_PASSWORD=placeholder",
]
