[project]
name = "boefjes"
version = "0.0.1.dev1"
description = "KAT's pentest tool runtime"
authors = [{ name = "MinVWS", email = "maintainer@openkat.nl" }]
requires-python = "~=3.10"
license = "EUPL-1.2"
dependencies = [
    "alembic==1.16.4",
    "click==8.2.1",
    "jsonschema==4.24.0",
    "pydantic==2.11.7",
    "docker==7.1.0",
    "uvicorn==0.29.0",
    "psycopg2-binary==2.9.10",
    "pynacl==1.5.0",
    "sqlalchemy==2.0.41",
    "python-dateutil==2.9.0.post0",
    "pydantic-settings==2.10.1",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.35.0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-instrumentation-psycopg2==0.56b0",
    "opentelemetry-instrumentation-requests==0.56b0",
    "opentelemetry-instrumentation==0.56b0",
    "requests==2.32.5",
    "beautifulsoup4==4.11.1",
    "dnspython==2.7.0",
    "tldextract==5.3.0",
    "validators==0.20.0",
    "python-libnmap==0.7.3",
    "cryptography==45.0.7",
    "forcediphttpsadapter==1.1.0",
    "urllib3==2.5.0",
    "wpscan-out-parse==1.9.3",
    "netaddr==1.3.0",
    "defusedxml==0.7.1",
    "pillow==11.3.0",
    "httpx==0.28.1",
    "opentelemetry-api==1.35.0",
    "opentelemetry-exporter-otlp-proto-common==1.35.0",
    "opentelemetry-instrumentation-asgi==0.56b0",
    "opentelemetry-instrumentation-dbapi==0.56b0",
    "opentelemetry-proto==1.35.0",
    "opentelemetry-semantic-conventions==0.56b0",
    "opentelemetry-util-http==0.56b0",
    "fastapi-slim==0.116.1",
    "structlog==25.4.0",
    "maxminddb==2.7.0",
    "tanimachi==0.0.6",
    "cpe==1.3.1",
    "croniter==6.0.0",
    "setuptools==80.9.0",
    "pyyaml (>=6.0.3,<7.0.0)",
    "annotated-types==0.7.0",
    "ansicolors==1.1.8",
    "anyio==4.9.0",
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "filelock==3.18.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jsonschema-specifications==2025.4.1",
    "loguru==0.7.3",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "protobuf==6.31.1",
    "pycparser==2.22",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "referencing==0.36.2",
    "requests-file==2.1.0",
    "returns==0.25.0",
    "rpds-py==0.26.0",
    "selectolax==0.3.34",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.47.3",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
    "wrapt==1.17.2",
    "zipp==3.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-env>=1.1.3,<2",
    "pytest-mock>=3.14.0,<4",
    "pytest-cov>=6.0.0,<7",
]

[tool.uv]
package = false

[tool.flynt]
line-length = 120
transform-concats = true

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow"]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered -m 'not slow'"
env = [
    "D:KATALOGUS_DB_URI=postgresql://postgres:postgres@ci_katalogus-db:5432/ci_katalogus",
    "D:BOEFJES_API=http://placeholder:8006",
    "D:KATALOGUS_API=http://placeholder:8000",
    "D:OCTOPOES_API=http://placeholder:8001",
    "D:SCHEDULER_API=http://placeholder:8002",
    "D:BYTES_API=http://placeholder:8003",
    "D:BYTES_USERNAME=placeholder",
    "D:BYTES_PASSWORD=placeholder",
]
