[tool.poetry]
name = "bytes"
version = "0.0.1.dev1"
description = "KAT's forensic data store"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
cachetools = "^5.3.1"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pika = "^1.3.1"
prometheus-client = "^0.16.0"
psycopg2 = "^2.9.6"
pydantic = "^2.7.1"
pynacl = "^1.5.0"
rfc3161ng = "^2.1.3"
sqlalchemy = "^1.4.48"
uvicorn = "^0.29.0"

# OpenTelemetry
opentelemetry-sdk = "^1.32.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.32.1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
opentelemetry-instrumentation-psycopg2 = "^0.53b1"
opentelemetry-instrumentation-httpx = "^0.53b1"
opentelemetry-instrumentation = "^0.53b1"
opentelemetry-instrumentation-dbapi = "^0.53b1"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.18"
httpx = "^0.28.1"
opentelemetry-api = "^1.32.1"
opentelemetry-exporter-otlp-proto-common = "^1.32.1"
opentelemetry-instrumentation-asgi = "^0.53b1"
opentelemetry-proto = "^1.32.1"
opentelemetry-semantic-conventions = "^0.53b1"
opentelemetry-util-http = "^0.53b1"
pyjwt = "^2.8.0"
fastapi-slim = "^0.115.2"
structlog = "^25.2.0"
cryptography = "^44.0.1"
boto3 = "^1.35.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-env = "^1.1.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered"
