[project]
name = "bytes"
version = "0.0.1.dev1"
description = "KAT's forensic data store"
authors = [{ name = "MinVWS", email = "maintainer@openkat.nl" }]
requires-python = "~=3.10"
license = "EUPL-1.2"
dependencies = [
    "alembic>=1.8.1,<2",
    "cachetools>6",
    "passlib[bcrypt]>=1.7.4,<2",
    "pika>=1.3.1,<2",
    "prometheus-client>=0.16.0,<0.17",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.7.1,<3",
    "pynacl>=1.5.0,<2",
    "rfc3161ng>=2.1.3,<3",
    "sqlalchemy>=1.4.48,<2",
    "uvicorn>=0.29.0,<0.30",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-dbapi",
    "pydantic-settings>=2.2.1,<3",
    "python-multipart>=0.0.18,<0.0.19",
    "httpx>=0.28.1,<0.29",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-proto",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "pyjwt>=2.8.0,<3",
    "fastapi-slim>=0.115.2",
    "structlog>=25.2.0,<26",
    "cryptography>45",
    "boto3>=1.40",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-env>=1.1.5,<2",
    "pytest-cov>=6.1.1,<7",
]

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered"
