[tool.poetry]
name = "cveapi"
version = "0.0.1.dev1"
description = "CVE API"
license = "EUPL"
authors = ["MinVWS <maintainer@openkat.nl>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"

[tool.poetry.scripts]
cveapi = 'cveapi:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
