[tool.poetry]
name = "keiko"
version = "0.0.1.dev1"
description = "KAT report engine using LateX to generate PDF"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pydantic = "^1.10.9"
Jinja2 = "^3.1.2"
fastapi = "^0.101.0"
uvicorn = "^0.20.0"
vulture = "^2.5"
opentelemetry-sdk = "^1.19.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
requests = "^2.31.0"
certifi = "^2023.7.22"
opentelemetry-instrumentation = "^0.41b0"
opentelemetry-instrumentation-requests = "^0.41b0"
opentelemetry-instrumentation-psycopg2 = "^0.41b0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.2.2"
robotframework-tidy = "^3.2"
robotframework = "^6.0.1"
robotframework-debuglibrary = "^2.3.0"
robotframework-requests = "^0.9.3"
vulture = "^2.7"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
line-length = 120
