[tool.poetry]
name = "keiko"
version = "0.0.1.dev1"
description = "KAT report engine using LateX to generate PDF"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pydantic = "^2.6.0"
Jinja2 = "^3.1.3"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
opentelemetry-sdk = "^1.19.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
requests = "^2.31.0"
certifi = "^2023.7.22"
opentelemetry-instrumentation = "^0.41b0"
opentelemetry-instrumentation-requests = "^0.41b0"
opentelemetry-instrumentation-psycopg2 = "^0.41b0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
robotframework-tidy = "^4.8.1"
robotframework = "^7.0"
robotframework-debuglibrary = "^2.3.0"
robotframework-requests = "^0.9.3"
httpx = "^0.26.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
line-length = 120
