[tool.poetry]
name = "keiko"
version = "0.0.1.dev1"
description = "KAT report engine using LateX to generate PDF"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pydantic = "^2.6.0"
Jinja2 = "^3.1.3"
uvicorn = "^0.29.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.26.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-instrumentation = "^0.47b0"
pydantic-settings = "^2.0.3"
fastapi-slim = "^0.111.0"
opentelemetry-api = "^1.26.0"
opentelemetry-exporter-otlp-proto-common = "^1.26.0"
opentelemetry-instrumentation-asgi = "^0.47b0"
opentelemetry-proto = "^1.26.0"
opentelemetry-semantic-conventions = "^0.47b0"
opentelemetry-util-http = "^0.47b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
robotframework-tidy = "^4.8.1"
robotframework = "^7.0"
robotframework-debuglibrary = "^2.3.0"
robotframework-requests = "^0.9.3"
pytest-dotenv = "^0.5.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
