[tool.poetry]
name = "mula"
version = "0.0.1.dev1"
description = "KAT's intelligent job scheduler"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
croniter = "^6.0.0"
mmh3 = "^5.1.0"
pika = "^1.3.2"
prometheus-client = "^0.19.0"
psycopg2 = "^2.9.10"
pydantic = "^2.11.3"
pydantic-settings= "^2.8.1"
python-dotenv = "^1.0.0"
retry2 = "^0.9.5"
sqlalchemy = "^2.0.23"
structlog = "^25.2.0"
uvicorn = "^0.29.0"
httpx = "^0.28.1"
fastapi-slim = "^0.115.12"

# OpenTelemetry
opentelemetry-sdk = "^1.32.1"
opentelemetry-api = "^1.32.1"
opentelemetry-proto = "^1.32.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.32.1"
opentelemetry-exporter-otlp-proto-common = "^1.32.1"
opentelemetry-util-http = "^0.53b1"
opentelemetry-instrumentation = "^0.53b1"
opentelemetry-instrumentation-httpx = "^0.53b1"
opentelemetry-instrumentation-asgi = "^0.53b1"
opentelemetry-instrumentation-dbapi = "^0.53b1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
opentelemetry-instrumentation-psycopg2 = "^0.53b1"
opentelemetry-semantic-conventions = "^0.53b1"

[tool.poetry.group.dev.dependencies]
factory_boy = "^3.2.1"
click = "^8.0.4"
psutil = "^5.9.5"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.coverage.run]
relative_files = true

omit = [
    "scheduler/alembic/*",
    "scheduler/config/*",
    "scheduler/context/*",
    "scheduler/models/*",
    "scheduler/utils/*",
    "scheduler/__main__.py",
]

[tool.pytest.ini_options]
addopts = "--cov scheduler/ --cov-config=pyproject.toml --cov-report xml --cov-branch --cov-report=term-missing:skip-covered"
