[tool.poetry]
name = "octopoes"
version = "0.0.1.dev1"
description = "KAT's knowledge graph engine"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[build-system]
requires = ["setuptools>=62.2", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
pika = "^1.3.1"
PyYAML = "^6.0"
dnspython = "^2.6.1"
kombu = "^5.2.4"
celery = "^5.2.7"
pyparsing = "^3.0.9"
packaging = "^23.0"
tldextract = "^3.4.0"
opentelemetry-sdk = "^1.32.1"
opentelemetry-instrumentation = "^0.53b1"
opentelemetry-exporter-otlp-proto-grpc = "^1.32.1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
opentelemetry-instrumentation-psycopg2 = "^0.53b1"
opentelemetry-instrumentation-httpx = "^0.53b1"
sqlalchemy = "1.4.48"
jsonschema = "^4.18.0"
pydantic-settings = "^2.2.1"
httpx = "^0.28.1"
# required by disallowed-csp-hostnames bit
link-shorteners = "^1.11.0"
opentelemetry-api = "^1.32.1"
opentelemetry-exporter-otlp-proto-common = "^1.32.1"
opentelemetry-instrumentation-asgi = "^0.53b1"
opentelemetry-instrumentation-dbapi = "^0.53b1"
opentelemetry-proto = "^1.32.1"
opentelemetry-semantic-conventions = "^0.53b1"
opentelemetry-util-http = "^0.53b1"

fastapi-slim = "^0.115.2"
structlog = "^25.2.0"
asgiref = "^3.8.1"
setuptools = "^78.1.1"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.2.2"
robotframework-requests = "^0.9.7"
robotframework-httplibrary = "^0.4.2"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"
pytest-timeout = "^2.4.0"
pytest-httpx = "^0.35.0"

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered"
env = [
    "D:XTDB_URI=http://testxtdb:3000",
    "D:QUEUE_URI=amqp://placeholder",
    "D:KATALOGUS_API=http://placeholder:8000",
]
